Changes before practice with friends...

--- a/Results.tex
+++ b/Results.tex
@@ -59,7 +59,7 @@ Water samples are collected for each site in dark Nalgene bottles (see Appendix~
             \draw[red,ultra thick] (0.8,0.5) rectangle (0.93,0.6);
         \end{scope}
     \end{tikzpicture}
-      \centerline{(a)}\medskip
+      \centerline{(b)}\medskip
     \end{minipage}
       \caption{Landsat 8 images acquired on (a) 09-29-2014 (scene LC80170302014272LGN00) and (b) 09-16-2015 (scene LC80170302015259LGN00). Study area indicated in red boxes. \label{fig:L8Images1415} }
 \end{figure}  
