Last version with CPAs details added...

--- a/ThesisBeamer.tex
+++ b/ThesisBeamer.tex
@@ -331,6 +331,17 @@ Water resources are important for both society and ecosystems:\\
 
 \end{frame}
 % ----------------------------------- Slide -------------------------------------
+\begin{frame}{\LARGE What do we want to obtain?}{\Large Water Components}
+\large
+Color Producing Agents (CPAs) or water components:
+\begin{enumerate}\itemsep0.5cm
+	\item {\bf Chlorophyll-{\it a}:} Main pigment of Phytoplankton.
+	\item {\bf Particles or Suspended Material (SM) or minerals:} Suspended inorganic particles, not dissolved.
+	\item {\bf Colored Dissolved Organic Matter (CDOM) or yellow substance:} From decomposition of organic material. Only absorber.
+\end{enumerate}
+
+\end{frame}
+% ----------------------------------- Slide -------------------------------------
 \begin{frame}{\LARGE Why Atmospheric Correction is important for Water Studies?} 
  \begin{columns}[c] % contents are top vertically aligned
   	\begin{column}[T]{5cm} % each column can also be its own environment
