Added new results including 2015 image

--- a/Results.tex
+++ b/Results.tex
@@ -839,7 +839,7 @@ The developed retrieval algorithm \citep{Concha2013IGARSS} was applied to the 09
     \end{tabular}
   \end{table}
 
-Then, the MoB-ELM algorithm finds the closest match in the least-squared sense for the $R_{rs}$ of water pixels with unknown CPA concentrations in the LUT of water pixels with known CPA concentrations. This first step is done in order to fix the IOP set (pond or lake) and the backscatter fraction. At this point, the closest element has discrete CPA concentration values corresponding to values used for the LUT generation (see \autoref{tab:LUTconc}). Finally, a non-linear interpolation is used to interpolate between the closest match's neighbors in order to obtain continuous values for the three CPAs simultaneously. In this study, this algorithm was applied to the $R_{rs}$'s results from the MoB-ELM method only, and not to the results from the Gordon and Wang's algorithms. 
+Then, the MoB-ELM algorithm finds the closest match in the least-squared sense for the $R_{rs}$ of water pixels with unknown CPA concentrations in the LUT of water pixels with known CPA concentrations. This first step is done in order to fix the IOP set (pond or lake) and the backscatter fraction (\autoref{fig:CPAsMaps130919_IOP_bb}). At this point, the closest element has discrete CPA concentration values corresponding to values used for the LUT generation (see \autoref{tab:LUTconc}). Finally, a non-linear interpolation is used to interpolate between the closest match's neighbors in order to obtain continuous values for the three CPAs simultaneously. In this study, this algorithm was applied to the $R_{rs}$'s results from the MoB-ELM method only, and not to the results from the Gordon and Wang's algorithms. 
 
 The results of the retrieval for the 09-19-2013 scene are illustrated in \autoref{fig:CPAsMaps130919} as a concentration map for each CPA. These maps exhibit the expected trend of low concentrations in the lake and higher concentrations in the ponds. Some bottom effect is perceived in the shoreline of Lake Ontario causing wrong high values, and these pixels are discarded. 
 
@@ -931,21 +931,21 @@ The results of the retrieval for the 09-19-2013 scene are illustrated in \autore
 %% Chl
   \begin{minipage}[b]{1.0\linewidth}
       \centering
-      \begin{overpic}[trim=0 0 0 120,clip,width=10.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/CHLmap150916masked.png} \put (105,55) {(a)}
+      \begin{overpic}[trim=0 0 0 120,clip,width=10.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/CHLmap150916masked_2.png} \put (105,55) {(a)}
       \end{overpic}   
   \end{minipage}\\
 \vspace{.3cm}\\
 %% TSS
   \begin{minipage}[b]{1.0\linewidth}
       \centering
-      \begin{overpic}[trim=0 0 0 120,clip,width=10.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/TSSmap150916masked.png} \put (105,55) {(b)}
+      \begin{overpic}[trim=0 0 0 120,clip,width=10.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/TSSmap150916masked_2.png} \put (105,55) {(b)}
       \end{overpic}   
   \end{minipage}\\
 \vspace{.3cm}\\
 %% CDOM
   \begin{minipage}[c]{1.0\linewidth}
       \centering
-      \begin{overpic}[trim=0 0 0 120,clip,width=10.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/CDOmap150916masked.png} \put (105,55) {(c)}
+      \begin{overpic}[trim=0 0 0 120,clip,width=10.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/Latex/ThesisPhD/Images/CDOmap150916masked_2.png} \put (105,55) {(c)}
       \end{overpic}   
   \end{minipage}
 % 
@@ -957,12 +957,12 @@ The results of the retrieval for the 09-19-2013 scene are illustrated in \autore
 
 % Note that the image to be analyzed needs to only include a bright target and not necessary a big urban area in order to determine the bright pixel from the Landsat surface reflectance product.\\
 
-The developed retrieval was also applied to the image acquired on 09-29-2014 (\autoref{fig:ROI_L8Images1415}.(b)). This image was analyzed in a similar fashion to the 09-19-2013 scene ((\autoref{fig:ROI_L8Images1415}.(a))) except that the reflectance of the bright pixel target used for the MoB-ELM algorithm was also predicted by Ecolight using data for the most eutrophic pond (Cranberry Pond), and not from a pixel in the Landsat Reflectance product. This approach is attractive when a wide range of water quality conditions are present and concentration measurements are available of bright and dark water targets. This approach may improve results where glint is present as it compensates for not only atmospheric effects but any other approximately linear phenomena that would modify the reflected energy leaving the water volume. Note that glint effects were not specifically compensated for in the atmospheric correction process and future efforts using the urban region bright target approach will need to compensate for glint when it is present. The concentration maps for this second scene are illustrated in \autoref{fig:CPAsMaps140929} again showing reasonable patterns in the lake and ponds. 
+The developed retrieval was also applied to the image acquired on 09-29-2014 (\autoref{fig:ROI_L8Images1415}.(b)). This image was analyzed in a similar fashion to the 09-19-2013 scene ((\autoref{fig:ROI_L8Images1415}.(a))) except that the reflectance of the bright pixel target used for the MoB-ELM algorithm was also predicted by Ecolight using data for the most eutrophic pond (Cranberry Pond), and not from a pixel in the Landsat Reflectance product. This approach is attractive when a wide range of water quality conditions are present and concentration measurements are available of bright and dark water targets. This approach may improve results where glint is present as it compensates for not only atmospheric effects but any other approximately linear phenomena that would modify the reflected energy leaving the water volume. Note that glint effects were not specifically compensated for in the atmospheric correction process and future efforts using the urban region bright target approach will need to compensate for glint when it is present. The concentration maps for this second scene from 2014 are illustrated in \autoref{fig:CPAsMaps140929} again showing reasonable patterns in the lake and ponds. \autoref{fig:CPAsMaps140929} shows the results for the image acquired on 09-16-2015.
 
 
 % ------------
 % \subsection{Comparison with {\it in situ} data}
-\autoref{fig:RetvsMea130919} shows a comparison between {\it in situ} measured concentrations and retrieved concentrations obtained from the retrieval for each CPA for four different sites in the area of study for the 09-19-2013 image. Two sites are representative of high CPA concentration (from the ponds: LongS and Cranb), and two are representative of low CPA concentrations (from the lake: OntOS and OntNS). The dashed line represent the 1:1 line. \autoref{fig:CPAsRetVSMea} shows the comparison between predicted and observed values for all sample sites on both days ($N=9$), along with a regression line fitted to the data and its respective goodness of fit values, the $R^2$ and \gls{rmse}. The $R^2$ value of the regression for all CPAs are high ($R^2\geq0.89$). Note that dark targets on both days and the bright target on the 2014 date are forced to match by the MoB-ELM process. The results are very encouraging showing good quantitative agreement across a very wide range of concentrations. 
+\autoref{fig:RetvsMea130919} shows a comparison between {\it in situ} measured concentrations and retrieved concentrations obtained from the retrieval for each CPA for four different sites in the area of study for the 09-19-2013 image. Two sites are representative of high CPA concentration (from the ponds: LongS and Cranb), and two are representative of low CPA concentrations (from the lake: OntOS and OntNS). The dashed line represent the 1:1 line. \autoref{fig:CPAsRetVSMea} shows the comparison between predicted and observed values for all sample sites on all three days ($N=14$), along with a regression line fitted to the data and its respective goodness of fit values, the $R^2$ and \gls{rmse}. The $R^2$ value of the regression for all CPAs are high ($R^2\geq0.84$). Note that dark targets on the three days and the bright target on the 2014 date are forced to match by the MoB-ELM process. The results are very encouraging showing good quantitative agreement across a very wide range of concentrations. 
 
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 \begin{figure}[htbp!]
@@ -997,14 +997,14 @@ The developed retrieval was also applied to the image acquired on 09-29-2014 (\a
   \begin{minipage}[c]{0.48\linewidth}
   \centering
   % CHL
-      \begin{overpic}[trim=40 0 80 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/CHLretvsmea150423}  
+      \begin{overpic}[trim=0 0 0 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/CHLretvsmea151211.png}  
   \put (100,80) {(a)}
       \end{overpic}   
   \end{minipage}
   % TSS
   \begin{minipage}[d]{0.48\linewidth}
   \centering
-      \begin{overpic}[trim=40 0 80 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/TSSretvsmea150423}
+      \begin{overpic}[trim=0 0 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/TSSretvsmea151211.png}
   \put (100,80) {(b)}
       \end{overpic}   
   \end{minipage}
@@ -1013,12 +1013,12 @@ The developed retrieval was also applied to the image acquired on 09-29-2014 (\a
   % CDOM
   \begin{minipage}[c]{1.0\linewidth}
   \centering
-      \begin{overpic}[trim=40 0 80 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/CDOMretvsmea150423}  
+      \begin{overpic}[trim=0 0 0 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/CDOMretvsmea151211.png}  
   \put (100,80) {(c)}
       \end{overpic}   
   \end{minipage}
 
-  \caption[Landsat 8's retrieved vs measured CPA concentration for the 09-19-2013 and 09-29-2014 scenes]{Landsat 8's retrieved vs measured CPA concentration for the 09-19-2013 ($\ast$) and 09-29-2014 ($\triangle$) scenes with regression line (solid red line) and goodness of fit values for (a) chlorophyll, (b) sediments, and (c) CDOM. The dashed line represents the 1:1 line. \label{fig:CPAsRetVSMea} } 
+  \caption[Landsat 8's retrieved vs measured CPA concentration for the 09-19-2013 and 09-29-2014 scenes]{Landsat 8's retrieved vs measured CPA concentration for the 09-19-2013 ($\ast$), 09-29-2014 ($\triangle$), and 09-16-2015 ($\circ$) scenes with regression line (solid red line) and goodness of fit values for (a) chlorophyll, (b) sediments, and (c) CDOM. The dashed line represents the 1:1 line. \label{fig:CPAsRetVSMea} } 
 \end{figure}
 
 The numerical results for the retrieval are summarized in \autoref{fig:RMSE} where the \gls{rmse} in predicted CPA concentration is normalized by the range in concentrations to estimate overall performance, i.e. the normalized RMSE (NRMSE) for the CPA concentration, defined as
@@ -1028,16 +1028,16 @@ The numerical results for the retrieval are summarized in \autoref{fig:RMSE} whe
   NRMSE =\frac{\sqrt{\frac{1}{N}\sum_{n=1}^N{\left[C_{ret}(n) - C_{mea}(n)\right]^2}}}{max\{C_{mea}(n)\} - min\{C_{mea}(n)\}}\times100 ~[\%]
 \end{equation}
 
-\noindent where $C_{ret}$ is the retrieved CPA concentration (i.e. $C_a$, $TSS$ or $a_{CDOM}(440nm)$), $C_{mea}$ is the measured CPA concentration, and $n=1,...,N$ is the $n$th site from a total of $N=9$ sites for both days. The {\it in situ} dataset used for the \gls{nrmse} calculation included the sites utilized for the MoB-ELM algorithm, .i.e. the dark (ONTOS) pixel for the 2013 scene and the dark (ONTOS) and bright (CRANB) pixels for the 2014 scene. The \gls{nrmse} are approximately $10\%$ for $C_a$ and $TSS$, and about $5\%$ for $a_{CDOM}(440nm)$. These errors are consistent with the expected errors reported by \citet{Gerace:2013}. 
+\noindent where $C_{ret}$ is the retrieved CPA concentration (i.e. $C_a$, $TSS$ or $a_{CDOM}(440nm)$), $C_{mea}$ is the measured CPA concentration, and $n=1,...,N$ is the $n$th site from a total of $N=14$ sites for all three days. The {\it in situ} dataset used for the \gls{nrmse} calculation included the sites utilized for the MoB-ELM algorithm, .i.e. the dark (ONTOS) pixel for the 2013 and 2015 scene and the dark (ONTOS) and bright (CRANB) pixels for the 2014 scene. The \gls{nrmse} are approximately $14\%$ for $C_a$, $11\%$ for $TSS$, and about $7\%$ for $a_{CDOM}(440nm)$. These errors are consistent with the expected errors reported by \citet{Gerace:2013}. 
 
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 \begin{figure}[htb]
   \centering
-      \begin{overpic}[height=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/RMSE_ret150421}
+      \begin{overpic}[height=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_Landsat_Special_Issue/Images/RMSE_ret151211.png}
       % \vspace{-.4cm}
-      \put (4.5,27.8) {\rotatebox{90}{N}}
+      % \put (4.5,27.8) {\rotatebox{90}{N}}
       \end{overpic} 
-      \caption{NRMSE for each CPA for the 09-19-2013 and 09-29-2014 scenes. \label{fig:RMSE}}
+      \caption{NRMSE for each CPA for the 09-19-2013, 09-29-2014 and 09-16-2015 scenes. \label{fig:RMSE}}
 \end{figure}
 
 % -----------------------------------------------------------
